# University

./: README.md
1st semester/Computer System Arhitecture/convert/: convert.asm  main.asm
1st semester/Computer System Arhitecture/lab 12/: convert.asm  mainC.c
1st semester/Computer System Arhitecture/lab 3/: lab3_set1_1.asm  set1_2.asm  set2_signed.asm  set2_unsigned.asm
1st semester/Computer System Arhitecture/lab 4/: lab_4.asm
1st semester/Computer System Arhitecture/lab 5/: lab_5.asm
1st semester/Computer System Arhitecture/lab 6/: lab_6.asm  lab_6.lst
1st semester/Computer System Arhitecture/test/: input.txt  test.asm  test.lst  text2.asm  text2.lst
1st semester/Fundamentals of programming/a11/: tests.py
1st semester/Fundamentals of programming/a12/: probl6.py
1st semester/a4/src/: start.py
2nd semester/DSA/linked list lab 2/: CMakeLists.txt  ExtendedTest.cpp
2nd semester/DSA/matrix - lab1/: CMakeLists.txt  ExtendedTest.cpp  Matrix.cpp  Matrix.h  ShortTest.cpp
2nd semester/DSA/sorted bag lab3/: CMakeLists.txt  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
2nd semester/DSA/sorted map lab5 BST/: SMIterator.h  SortedMap.cpp
2nd semester/DSA/sorted set lab4 hashtable with separate chaining/: CMakeLists.txt  ShortTest.cpp  SortedSet.h  SortedSetIterator.cpp
2nd semester/Data Structures and Algorithms/linked list lab 2/: IndexedList.cpp  IndexedList.h  ListIterator.cpp  ListIterator.h
2nd semester/Data Structures and Algorithms/matrix - lab1/: App.cpp
2nd semester/Data Structures and Algorithms/sorted map lab5 BST/: CMakeLists.txt  SMIterator.cpp  SortedMap.h
2nd semester/Data Structures and Algorithms/sorted set lab4 hashtable with separate chaining/: ExtendedTest.cpp  SortedSet.cpp  SortedSetIterator.h
2nd semester/Graph Algorithms/A1/: graph.py  graph.txt  graph1k_modify.txt  graph2.txt  graphA4.txt  graphA4_2.txt  graphA5.txt  graphA5_2.txt  graph_modify.txt  main.py  menu.py  random_graph.py  random_graph1.txt
2nd semester/Graph Algorithms/A2/: graph.py
2nd semester/Graph Algorithms/A3/: graph.py  graph.txt  graph2.py  graph2.txt  graph3.py  graph4.py  main.py
2nd semester/OOP/a1/: main.c
2nd semester/OOP/a23/: array.c  array.h  main.c  repo.c  repo.h  service.c  service.h  tests.c  tests.h
2nd semester/OOP/a67/: CMakeLists.txt  UMLDiagram.mdj  tutorials.txt
2nd semester/OOP/a67/domain/: domain.cpp
2nd semester/OOP/a67/repo/: FileRepo.h  repo.cpp
2nd semester/OOP/a67/service/: service.cpp
2nd semester/OOP/a67/tests/: tests.cpp
2nd semester/OOP/a67/ui/: UI.cpp
2nd semester/OOP/a67/utils/: utils.h
2nd semester/OOP/a89/: CMakeLists.txt  main.cpp  tutorials.txt  watchlist.html
2nd semester/OOP/a89/gui/: NumericFilterProxyModel.cpp  gui.h  gui5.cpp  gui5.h  gui5.ui  tutorialModel.cpp  tutorialModel.h
2nd semester/OOP/a89/iterator/: iterator.cpp
2nd semester/OOP/a89/repo/: CSVRepo.cpp  FileRepo.cpp  HTMLRepo.cpp  IFileRepo.h  repo.cpp  repo.h
2nd semester/OOP/a89/service/: service.cpp
2nd semester/OOP/a89/utils/: utils.cpp
2nd semester/OOP/a89/validator/: validator.cpp
2nd semester/OOP/drill/: Model.cpp  Repository.cpp  Repository.h  Testing.h  Utils.cpp  Utils.h  Writer.h  gui.cpp  gui.h  plot.txt
2nd semester/OOP/practiceTest/: Car.cpp  Car.h  Repo.cpp  Repo.h  Service.cpp
2nd semester/OOP/t1/: main.cpp  service.cpp  ui.cpp
2nd semester/OOP/t2/: BMI.cpp  BP.cpp  Measurement.cpp  Person.cpp  Person.h  UI.cpp  domain.cpp  main.cpp  validator.h
2nd semester/OOP/t3/: Service.cpp  Weather.h  gui.h  gui.ui  main.cpp
2nd semester/Object Oriented Programming/a1/: CMakeLists.txt
2nd semester/Object Oriented Programming/a23/: CMakeLists.txt  CMakeSettings.json  UI.c  UI.h  holiday.c  holiday.h
2nd semester/Object Oriented Programming/a45/: CMakeLists.txt  main.cpp
2nd semester/Object Oriented Programming/a45/domain/: domain.h
2nd semester/Object Oriented Programming/a45/repo/: repo.h
2nd semester/Object Oriented Programming/a45/service/: service.cpp
2nd semester/Object Oriented Programming/a45/tests/: tests.cpp  tests.h
2nd semester/Object Oriented Programming/a67/: main.cpp  watchlist.csv  watchlist.html
2nd semester/Object Oriented Programming/a89/: watchlist.txt
2nd semester/Object Oriented Programming/drill/: CMakeLists.txt  Controller.cpp  Controller.h  Idea.cpp  Idea.h  Model.h  Testing.cpp  Writer.cpp  gui.ui  main.cpp
2nd semester/Object Oriented Programming/practiceTest/: CMakeLists.txt  Service.h  car.txt  gui.cpp  gui.h  main.cpp
2nd semester/Object Oriented Programming/t1/: CMakeLists.txt  gene.cpp  gene.h  repo.cpp  repo.h  service.h  ui.h
2nd semester/Object Oriented Programming/t2/: BMI.h  BP.h  CMakeLists.txt  Measurement.h  UI.h  domain.h  validator.cpp
2nd semester/Object Oriented Programming/t3/: CMakeLists.txt  Repo.cpp  Repo.h  Service.h  Weather.cpp  gui.cpp
3rd semester/Advanced programming methods/interpretor2/: log4.txt
3rd semester/Advanced programming methods/interpretor3/: log6.txt  log7.txt
3rd semester/Advanced programming methods/interpretor4/: log8.txt
3rd semester/Advanced programming methods/interpretor5/: log1.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt  log7.txt
3rd semester/Advanced programming methods/interpretor6/: log10.txt
3rd semester/Advanced programming methods/interpretor6 - CountSemaphore/: log10.txt  log4.txt  log5.txt  log6.txt  log7.txt  log8.txt
3rd semester/Advanced programming methods/interpretor6 - EXAM/: log10.txt  log11.txt
3rd semester/Logic and functional programming/l1/: 11  pb1  pb11  pb3  pb5  prf
3rd semester/Logic and functional programming/l2/: 4
3rd semester/Logic and functional programming/l3/: 10  pb10  pb3  pb8
3rd semester/Probability and statistics/: exam_practic.m  lab1_2.m  lab1_3.m  lab2_1.m  lab2_2.m  lab2_a.m  lab2_b.m  lab3.m  lab3_2.m  lab4_a.m  lab4_b.m  lab4_c.m  lab5.m  lab6.m  practic1.m  practic2.m  practic3.m  practic4.m
3rd semester/databasess/: cats_cafe.sql  homework2.sql  homework3.sql  homework4.sql  homework5.sql
(+997 files in other folders)
