cmake_minimum_required(VERSION 3.17)
project(sorted_map_lab5_BST)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(sorted_map_lab5_BST
        App.cpp
        ExtendedTest.cpp
        ExtendedTest.h
        ShortTest.cpp
        ShortTest.h
        SMIterator.cpp
        SMIterator.h
        SortedMap.cpp
        SortedMap.h)
